Fix the height of the `hero-wrap`.

--- a/less/hero.less
+++ b/less/hero.less
@@ -4,7 +4,8 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	min-height: calc(18em + 65.625vw);
+	height: calc(18em + 65.625vw);
+	min-height: 100%;
 	overflow: hidden;
 	
 	.hero-image {
